demo/colors-with-health.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: red-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: red
  template: 
    metadata:
      labels:
        app: red
    spec:
      containers:
      - name: red
        image: codegazers/colors:1.5
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            port: 3000
            path: /health
            httpHeaders:
            - name: AppStatus
              value: "UP"
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 4
          successThreshold: 2
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: red-svc
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: red
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blue-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue
  template: 
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: codegazers/colors:1.5
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            port: 3000
            path: /health
            httpHeaders:
            - name: AppStatus
              value: "UP"
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 4
          successThreshold: 2
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: blue
---
